--- a/src/Backend/docker-compose.yml
+++ b/src/Backend/docker-compose.yml
@@ -8,6 +8,18 @@ volumes:
   search_data: {}
 
 services:
+  flask_search:
+    build:
+        context: .
+        dockerfile: Dockerfile
+    container_name: flask_app
+    ports:
+      - 5500:5000
+    networks:
+      - flask_search
+    depends_on:
+      - search
+
   search:
     image: getmeili/meilisearch
     container_name: search
