--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,9 +35,11 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run unit tests
+      working-directory: ./src/Backend
       run: |
-        python /Code/src/Backend/unit_tests.py
+        python unit_tests.py
     - name: Run integration tests
+      working-directory: ./src/Backend
       run: |
-        python /Code/src/Backend/integration_tests.py
+        python integration_tests.py
 
