--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Docker Compose Action
-    - uses: isbang/compose-action@v1.5.1
+      uses: isbang/compose-action@v1.5.1
       with: 
           compose-file: "src/Backend/docker-compose.yml"
     - name: Run unit tests
